--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "find-biome-alternatives",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin": {
+    "find-biome-alternatives": "./index.js"
   },
   "keywords": [],
   "author": "Yagiz Nizipli <yagiz@nizipli.com>",
