--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "find-biome-alternatives": "./index.js"
+    "find-biome-alternatives": "./bin.js"
   },
   "keywords": [],
   "author": "Yagiz Nizipli <yagiz@nizipli.com>",
